--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -33,3 +33,21 @@ jobs:
           path: |
             reports
             htmlcov
+
+  integration:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov pytest-html pytest-advance requests
+
+      - name: Run integration tests
+        run: |
+          pytest -m integration -q
