--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov pytest-html pytest-advance requests
+          pip install pytest requests
 
       - name: Run integration tests
         run: |
